# rag-langchain

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.eval  Dockerfile.ui  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-eval.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/docs/: 01-getting-started.md  02-authentication.md  03-rate-limits.md  04-webhooks.md  05-billing-plans.md  06-troubleshooting.md
deploy/hf-space/: DEPLOY_GUIDE.md  Dockerfile  space_README.md  start.sh
deploy/streamlit-cloud/: DEPLOY_GUIDE.md
eval/: golden_set.jsonl  run_eval.py
src/rag_lc/: __init__.py  api.py  components.py  config.py  ingest.py  observability.py  pipeline.py  prompts.py  schemas.py
tests/: test_analytics.py  test_eval_results.py  test_metrics.py  test_pipeline.py  test_upload.py
ui/: common.py  demo_backend.py  streamlit_app.py
ui/views/: analytics.py  chat.py  corpus.py  evaluation.py  guide.py
